--- a/app/src/main/res/layout/activity_members_only.xml
+++ b/app/src/main/res/layout/activity_members_only.xml
@@ -24,8 +24,8 @@
             <Button
                 android:id="@+id/homeButton10"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_height="100sp"
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/cfgc_logo"
                 android:clickable="true"
