--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -70,8 +70,10 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/eventsLabelTextView">
+        app:layout_constraintTop_toBottomOf="@+id/eventsLabelTextView"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/cruiseDescriptionTextView"
