--- a/app/src/main/res/layout/activity_directions.xml
+++ b/app/src/main/res/layout/activity_directions.xml
@@ -26,12 +26,24 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_layout_item_settings"
         android:clickable="false"
-        android:focusable="auto"
+        android:focusable="false"
+        android:maxLines="2"
+        android:minLines="1"
+        android:padding="0dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="0dp"
         android:text="@string/about10"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
-        android:textSize="16sp"
+        android:textIsSelectable="false"
+        android:textSize="18sp"
+        app:autoSizeMaxTextSize="24sp"
+        app:autoSizeMinTextSize="16sp"
+        app:autoSizeStepGranularity="2sp"
+        app:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/homeButton12" />
@@ -39,29 +51,35 @@
     <Button
         android:id="@+id/fButton"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:background="@drawable/black_border_background_settings"
         android:clickable="true"
         android:focusable="true"
-        android:lines="2"
-        android:singleLine="false"
+        android:includeFontPadding="false"
+        android:maxLines="2"
+        android:minLines="1"
+        android:padding="0dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="0dp"
         android:text="@string/get_directions_to_marker_10"
         android:textAllCaps="false"
         android:textColor="@color/colorPrimary"
-        android:textSize="22sp"
+        android:textSize="24sp"
         android:typeface="normal"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guideline8" />
+        app:layout_constraintTop_toBottomOf="@+id/dLabel" />
 
     <Button
         android:id="@+id/backButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/black_border_background_settings"
         android:clickable="true"
@@ -100,19 +118,20 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
+        android:contentDescription="@string/todo"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/guideline10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleTV"
-        app:srcCompat="@drawable/ribboncutting"
-        android:contentDescription="@string/todo" />
+        app:layout_constraintTop_toBottomOf="@+id/titleTV"
+        app:srcCompat="@drawable/garden2" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.6" />
+        app:layout_constraintGuide_percent="0.57" />
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -148,11 +167,26 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_layout_item_settings"
+        android:clickable="false"
+        android:focusable="false"
+        android:maxLines="2"
+        android:minLines="1"
+        android:padding="0dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="0dp"
         android:text="@string/get_directions_to_marker_10"
         android:textAlignment="center"
+        android:textAllCaps="false"
         android:textColor="#FFFFFF"
+        android:textIsSelectable="false"
         android:textSize="20sp"
         android:visibility="gone"
+        app:autoSizeMaxTextSize="24sp"
+        app:autoSizeMinTextSize="16sp"
+        app:autoSizeStepGranularity="2sp"
+        app:autoSizeTextType="uniform"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline8" />
@@ -168,10 +202,17 @@
         android:background="@drawable/black_border_background_settings"
         android:clickable="true"
         android:focusable="true"
+        android:includeFontPadding="false"
+        android:padding="0dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingRight="0dp"
+        android:paddingBottom="0dp"
+        android:singleLine="true"
         android:text="@string/saturday_sunday"
         android:textAllCaps="false"
         android:textColor="@color/colorPrimary"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/fButton"
         app:layout_constraintEnd_toEndOf="parent"
